Fix : z-index to 201 to clear click

--- a/src/assets/App.module.css
+++ b/src/assets/App.module.css
@@ -374,7 +374,7 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  z-index: 101;
+  z-index: 201;
   cursor: pointer;  
   margin: 1rem;
   backdrop-filter: blur(20px);
